<resources>
    <string name="app_name">ExperienceTrip</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="crea_nuovo_account">Crea nuovo account</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="sesso">Sesso</string>
    <string name="data_nascita">Data Nascita</string>
    <string name="citta">Città</string>
    <string name="regiatrati">Registrati</string>
    <string name="indietro">Indietro</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="cerca">Cerca città</string>
    <string name="vedi_dati_citt">Vedi città</string>
    <string name="vedi_dati_monumenti">Vedi monumenti</string>
    <string name="vedi_dati_gastronomia">Vedi gastronomia</string>
    <string name="vedi_dati_hotel_bb">Vedi Hotel/BB</string>
    <string name="vedi_tutti_i_dati">Vedi tutti i dati</string>
    <string name="inserisci">Inserisci</string>
    <string name="monumento">Monumento</string>
    <string name="ristoranti">Ristoranti</string>
    <string name="hotel_bb">Hotel/BB</string>
    <string name="cancella">Cancella</string>
    <string name="vedi_dati_utente">Vedi dati utente</string>
    <string name="uomo">Uomo</string>
    <string name="donna">Donna</string>
    <string name="sei_sicuro">Sei sicuro?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="NuovaPassword">Nuova Password</string>
    <string name="PasswordAttuale">Password Attuale</string>
    <string name="Password">Password</string>
    <string name="Avanti">Avanti</string>
    <string name="logout">Logout</string>
    <string name="attiva_gps">Attiva GPS</string>
    <string name="check_citt">Check Città</string>
    <string name="i_miei_viaggi">I miei viaggi</string>
    <string name="usa_coupon">Usa coupon</string>
    <string name="benvenuto_nel_tuo_profilo">Benvenuto nel tuo profilo</string>
    <string name="conferma_password">Conferma password</string>
    <string name="inserisci_la_tua_foto_profilo">Inserisci la tua foto profilo</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="punto_gastronomia">Punto Gastronomia</string>
    <string name="punto_di_interesse">Punto di interesse</string>
    <string name="coupon">Coupon</string>
    <string name="torna_alla_home">Torna alla Home</string>
    <string name="inserisci_coupon">Inserisci coupon</string>
    <string name="aggiunta_viaggio">Aggiungi viaggio</string>
    <string name="vuoi_aggiungere">Vuoi aggiungere?</string>
    <string name="cancellazione">Cancellazione</string>
    <string name="sei_sicuro_cancellare">Sei sicuro di voler cancellare?</string>
    <string name="citta_presente">Città presente</string>
    <string name="citta_non_presente">Città non presente</string>
    <string name="permesso_non_abilitatto">Permesso non abilitato</string>
    <string name="campo_obbligatorio">Campo Obbligatorio</string>
    <string name="permesso_negato">Permesso negato</string>
    <string name="inserire_coupon">Inserire coupon. Lo trovi nel tuo profilo!</string>
    <string name="coupon_non_valido">Coupon non valido</string>
    <string name="elimina_gastronomia">Punto Gastronomia eliminato con successo</string>
    <string name="inserisci_gastronomia">Punto gastronomia inserito con successo</string>
    <string name="elimina_citta">Città eliminata con successo</string>
    <string name="inserisci_citta">Città inserita con successo</string>
    <string name="elimina_hotel">Hotel/B&amp;B eliminato con successo</string>
    <string name="inserisci_hotel">Hotel/B&amp;B inserito con successo</string>
    <string name="sei_ad">Sei ad </string>
    <string name="chiudi">Chiudi</string>
    <string name="vai_alla_scheda">Vai alla scheda</string>
    <string name="elimina_monumento">Monumento eliminato con successo</string>
    <string name="inserisci_monumento">Monumento inserito con successo</string>
    <string name="nessun_utente">Nessun utente</string>
    <string name="email_gia_presente">E-mail già presente</string>
    <string name="registrazione_successo">Registrazione avvenuta con successo</string>
    <string name="inserisci_aggiornamento">Inserisci i dati per l\'aggiornamento</string>
    <string name="Gastronomia">Gastronomia</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="visualizza_dati">Visualizza Dati</string>
    <string name="luoghi">Luoghi</string>
    <string name="cibo">cibo</string>
    <string name="riscatta_coupon">Riscatta Coupon</string>
    <string name="riscatta">Riscatta</string>
    <string name="cerca_una_citta">Cerca una citta</string>
    <string name="visualizza_luoghi">Visualizza luoghi</string>
    <string name="visualizza_utenti">Visualizza Utenti</string>
    <string name="luogo">Luogo:</string>
    <string name="nome_luogo">Nome Luogo:</string>
    <string name="categoria">Categoria</string>
    <string name="aggiungi_a_visitati">Aggiungi a Visitati</string>
    <string name="vedi_su_mappa">Vedi su mappa</string>


    <plurals name="le_citt_da_te_visitate">
        <item quantity="zero">Nessuna città visitata</item>
        <item quantity="one">La città da te visitata:</item>
        <item quantity="other">Le città da te visitate:</item>
    </plurals>
</resources>
