<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunzioniAmministratoreActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="Scrivi una email per cancella il record"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="Scegli un campo per modificare il record"/>

    <Button
        android:id="@+id/button_modifica"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Modifica dati"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button_cancella"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Cancella"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edittext_nome"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="none" />

    <EditText
        android:id="@+id/edittext_cognome"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/cognome"
        android:importantForAutofill="no"
        android:inputType="none" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/edittext_data"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/data_nascita"
        android:importantForAutofill="no"
        android:inputType="date" />

    <EditText
        android:id="@+id/edittext_citta"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/citta"
        android:importantForAutofill="no"
        android:inputType="none" />

    <EditText
        android:id="@+id/edittext_sesso"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/sesso"
        android:importantForAutofill="no"
        android:inputType="none" />

</LinearLayout>