<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisualizzaDatiAmministratoreActivity"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/button_dati_utente"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="75dp"
        android:text="@string/vedi_dati_utente"
        android:onClick="onAggDatiUtente"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".20"/>

    <Button
        android:id="@+id/button_dati_città"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:onClick="onAggDatiCitta"
        android:text="@string/vedi_dati_citt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".20" />

    <Button
        android:id="@+id/button_dati_monumenti"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="225dp"
        android:onClick="onAggDatiMonumenti"
        android:text="@string/vedi_dati_monumenti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".20" />

    <Button
        android:id="@+id/button_dati_gastronomia"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:onClick="onAggDatiGastronomia"
        android:text="@string/vedi_dati_gastronomia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".20" />

    <Button
        android:id="@+id/button_dati_hotelBB"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="375dp"
        android:onClick="onAggDatiHotel"
        android:text="@string/vedi_dati_hotel_bb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".20" />

</androidx.constraintlayout.widget.ConstraintLayout>
