<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="65dp"
    android:padding="30dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_email_agg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordAttuale"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittext_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NuovaPassword"
        android:inputType="textPassword" />
</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_aggiorna"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="Aggiorna"
        android:onClick="onUpdate"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>