<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_chiaro"
    tools:context=".CancellaAmministratoreActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout16"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_citta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/citta"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout17"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_monumenti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/monumento"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_cancella"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="240dp"
        android:text="@string/cancella"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>